k8/dev/app/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "app.ktamariz.ml"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
        
  
#  tls:
#  - hosts:
#    - app.ktamariz.ga
#    secretName: app.ktamariz-ga
